--- a/package.json
+++ b/package.json
@@ -6,21 +6,41 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "upload-specs": "tsx scripts/upload-product-specs.ts"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.0.4",
+    "@radix-ui/react-collapsible": "^1.1.1",
+    "@radix-ui/react-scroll-area": "^1.2.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@supabase/supabase-js": "^2.46.1",
+    "@tailwindcss/typography": "^0.5.15",
+    "@types/marked": "^6.0.0",
+    "ai": "^4.0.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
+    "gray-matter": "^4.0.3",
+    "lucide-react": "^0.460.0",
+    "marked": "^15.0.3",
+    "next": "15.0.3",
+    "next-themes": "^0.4.3",
+    "openai-edge": "^1.2.2",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.0.3"
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.19.2"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "15.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3"
+    "typescript": "^5"
   }
 }
